// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array fields array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="flex flex-column gap-2"
    >
      <button
        className="p-button p-component p-button-outlined p-button-sm mt-1 mb-3 array-item-add p-button-icon-only"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <i
          className="pi pi-plus"
        />
        <span
          className="p-button-label p-c"
          dangerouslySetInnerHTML={
            Object {
              "__html": "&nbsp;",
            }
          }
        />
      </button>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`array fields checkboxes 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="mb-2"
    >
      <div
        className="p-multiselect p-component p-inputwrapper"
        id="root"
        onClick={[Function]}
        style={null}
      >
        <div
          className="p-hidden-accessible"
        >
          <input
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby={null}
            disabled={false}
            id={null}
            name={null}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            role="listbox"
            tabIndex={0}
            type="text"
          />
        </div>
        <div
          className="p-multiselect-label-container"
        >
          <div
            className="p-multiselect-label p-multiselect-label-empty"
          >
            empty
          </div>
        </div>
        <div
          className="p-multiselect-trigger"
        >
          <span
            className="p-multiselect-trigger-icon p-c pi pi-chevron-down"
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`array fields fixed array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="flex flex-column gap-2"
    >
      <div
        className="flex align-items-start gap-2 p-2 border-1 border-round"
      >
        <div
          className="flex-grow-1"
        >
          <div>
            <div>
              <input
                autoFocus={false}
                className="p-inputtext p-component w-full"
                disabled={false}
                id="root_0"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyPress={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div />
      </div>
      <div
        className="flex align-items-start gap-2 p-2 border-1 border-round"
      >
        <div
          className="flex-grow-1"
        >
          <div>
            <div>
              <input
                autoFocus={false}
                className="p-inputtext p-component w-full"
                disabled={false}
                id="root_1"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyPress={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                type="number"
                value=""
              />
            </div>
          </div>
        </div>
        <div />
      </div>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;
